add different object variables

--- a/pizza.html
+++ b/pizza.html
@@ -29,7 +29,7 @@
 	</form>
 
 	<div id="orderTotal">
-		<p>"Your total is " + "$" + userbill + ", thank you for your order!</p>
+		<p>"Your total is " + "$" + <span id="userBill"></span> + ", thank you for your order!</p>
 	</div>
 </body>
 </html>
